# Z80-Simulator

./: .gitignore  CMakeLists.txt  README.md  build.bat  z80 circuit.aseprite
include/: assetManager.hpp  game.hpp  instructions.hpp  mapState.hpp  ops.hpp  system.hpp
shaders/: shader.frag
source/: controller.cpp  game.cpp  instructions.cpp  main.cpp  mapState.cpp  menuState.cpp  ops.cpp  window.cpp
src/: buffer.hpp  commandBuffer.hpp  global.hpp  graphics.hpp  main.cpp  memory.hpp  shader.hpp  vertex.hpp  window.hpp  windowVariables.hpp
